Group problems into "problem sets"
